--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <a href="index.html">
       <div class="Navbar__Btn"><span>📖</span> <span>Home</span></div>
     </a>
-                            <span class="Navbar__Delim">&centerdot;</span>
+                                    <span class="Navbar__Delim">&centerdot;</span>
     <a href="about.html">
       <div class="Navbar__Btn"><span>😀</span> <span>About</span></div>
     </a>
@@ -51,6 +51,18 @@
       </header>
   <article class="ArticleList">
                 <article class="Article">
+      <h3 class="Article__Title">
+            <span>🕹️</span>        <a href="shapley-q.html">
+              Shapley Value and Q-learning            </a>
+          </h3>
+            <div class="DateTagBar">
+                  <span class="DateTagBar__Item DateTagBar__Date">Posted on Thu, Sep 16, 2021</span>
+                            <span class="DateTagBar__Item DateTagBar__Tag DateTagBar__Tag--orange">
+            <a href="tag/EN.html">EN</a>
+          </span>
+                  </div>
+    </article>
+                      <article class="Article">
       <h3 class="Article__Title">
             <span>🃏</span>        <a href="hanabi.html">
               Hanabi Game: A Board Game with Potential Challenges            </a>
